--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <p class="advantages__slogan">Устали от серости мегаполиса?</p>
             <p class="advantages__slogan">Нам есть, что вам предложить!</p>
           </section>
+        </div>
+        <div class="advantages__wrapper  advantages__wrapper--grey">
           <ol class="advantages__list">
             <li class="advantages__item">
               <h3 class="advantages__item-title">Поднимает настроение</h3>
