--- a/photo.html
+++ b/photo.html
@@ -43,7 +43,7 @@
             <a>
           </div>
           <div class="gallery__post-content">
-            <cite class="gallery__post‐author">Анна</cite>
+            <cite class="gallery__post-author">Анна</cite>
             <time class="gallery__post-date">(5 минут назад)</time>
             <p class="gallery__post-text">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
             <section class="gallery__post-likes">
@@ -59,7 +59,7 @@
             <a>
           </div>
           <div class="gallery__post-content">
-            <cite class="gallery__post‐author">Левон</cite>
+            <cite class="gallery__post-author">Левон</cite>
             <time class="gallery__post-date">(5 часов назад)</time>
             <p class="gallery__post-text">Вчера он на Луну летал, сегодня в руки к нам попал.</p>
             <section class="gallery__post-likes">
@@ -75,7 +75,7 @@
             <a>
           </div>
           <div class="gallery__post-content">
-            <cite class="gallery__post‐author">Антон</cite>
+            <cite class="gallery__post-author">Антон</cite>
             <time class="gallery__post-date">(12 часов назад)</time>
             <p>Соседи будут рады!</p>
             <section class="gallery__post-likes">
@@ -91,7 +91,7 @@
               <a>
             </div>
             <div class="gallery__post-content">
-              <cite class="gallery__post‐author">Борис</cite>
+              <cite class="gallery__post-author">Борис</cite>
               <time class="gallery__post-date">(20 часов назад)</time>
               <p class="gallery__post-text">Здесь могла быть ваша цитата о высоком и вечном.</p>
               <section class="gallery__post-likes">
@@ -107,7 +107,7 @@
             <a>
           </div>
           <div class="gallery__post-content">
-            <cite class="gallery__post‐author">Сергей</cite>
+            <cite class="gallery__post-author">Сергей</cite>
             <time class="gallery__post-date">(25 часов назад)</time>
             <p class="gallery__post-text">Самая кубанская в мире!</p>
             <section class="gallery__post-likes">
@@ -123,7 +123,7 @@
             <a>
           </div>
           <div class="gallery__post-content">
-            <cite class="gallery__post‐author">Максим</cite>
+            <cite class="gallery__post-author">Максим</cite>
             <time class="gallery__post-date">(40 часов назад)</time>
             <p class="gallery__post-text">Где снег-то?</p>
             <section class="gallery__post-likes">
@@ -139,7 +139,7 @@
             <a>
           </div>
           <div class="gallery__post-content">
-            <cite class="gallery__post‐author">Надежда</cite>
+            <cite class="gallery__post-author">Надежда</cite>
             <time class="gallery__post-date">(45 часов назад)</time>
             <p class="gallery__post-text">Всем GM и взаимные лайки!</p>
             <section class="gallery__post-likes">
