--- a/photo.html
+++ b/photo.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Пинк: Фотографии</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__logo">
-        <a href="index.html">
-          <img src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Логотип">
-        </a>
-      </div>
-      <nav class="main-nav  main-nav--open">
-        <button class="main-nav__toggler">Закрыть<img src="close.svg" alt=""></button>
+      <nav class="main-nav  main-nav--closed  main-nav--nojs">
+        <div class="main-nav__logo">
+          <a href="index.html">
+            <img src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Логотип">
+          </a>
+        </div>
+        <button class="main-nav__toggler" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item">
@@ -29,20 +30,20 @@
           </ul>
         </div>
       </nav>
+      <section class="promo">
+        <h1 class="promo__title">Фотографии пользователей</h1>
+      </section>
     </header>
-    <section class="promo promo--photo">
-      <h1 class="promo__title">Фотографии пользователей</h1>
-    </section>
     <main class="page-content">
       <section class="gallery">
-        <p class="gallery__promo">Взгляните на фотографии, которые выкладывают пользователи!Видите, как не хватает ваших?</p>
-        <article class="gallery__post">
-          <div class="gallery__post-photo  gallery__post-photo--daily">
+        <p class="gallery__promo">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
+        <article class="gallery__post-daily">
+          <div class="gallery__photo-daily">
             <a href="#">
-              <img src="img/panorama-mobile@1x.jpg" width="280" height="180" alt="Прыжок"></img>
-            <a>
+              <img src="img/panorama-mobile@1x.jpg" alt="Прыжок"></img>
+            </a>
           </div>
-          <div class="gallery__post-content">
+          <div class="gallery__content-daily">
             <cite class="gallery__post-author">Анна</cite>
             <time class="gallery__post-date">(5 минут назад)</time>
             <p class="gallery__post-text">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
@@ -52,113 +53,121 @@
             </section>
           </div>
         </article>
-        <article class="gallery__post">
-          <div class="gallery__post-photo">
-            <a href="#">
-              <img src="img/photo-1-mobile@1x.jpg" alt="Авто">
-            <a>
-          </div>
-          <div class="gallery__post-content">
-            <cite class="gallery__post-author">Левон</cite>
-            <time class="gallery__post-date">(5 часов назад)</time>
-            <p class="gallery__post-text">Вчера он на Луну летал, сегодня в руки к нам попал.</p>
-            <section class="gallery__post-likes">
-              <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></button>
-              <span>Нравится: 356</span>
-            </section>
-          </div>
-        </article>
-        <article class="gallery__post">
-          <div class="gallery__post-photo">
-            <a href="#">
-              <img src="img/photo-2-mobile@1x.jpg" alt="Барабаны">
-            <a>
-          </div>
-          <div class="gallery__post-content">
-            <cite class="gallery__post-author">Антон</cite>
-            <time class="gallery__post-date">(12 часов назад)</time>
-            <p>Соседи будут рады!</p>
-            <section class="gallery__post-likes">
-              <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></button>
-              <span>Нравится: 666</span>
-            </section>
-          </div>
-        </article>
-        <article class="gallery__post">
+        <div class="gallery__post-wrapper">
+          <article class="gallery__post">
             <div class="gallery__post-photo">
               <a href="#">
-                <img src="img/photo-3-mobile@1x.jpg" alt="Вид на небо через окна небоскреба">
-              <a>
+                <img src="img/photo-1-mobile@1x.jpg" alt="Авто">
+              </a>
             </div>
             <div class="gallery__post-content">
-              <cite class="gallery__post-author">Борис</cite>
-              <time class="gallery__post-date">(20 часов назад)</time>
-              <p class="gallery__post-text">Здесь могла быть ваша цитата о высоком и вечном.</p>
+              <cite class="gallery__post-author">Левон</cite>
+              <time class="gallery__post-date">(5 часов назад)</time>
+              <p class="gallery__post-text">Вчера он на Луну летал, сегодня в руки к нам попал.</p>
               <section class="gallery__post-likes">
-                <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></img></button>
-                <span>Нравится: 215</span>
+                <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></button>
+                <span>Нравится: 356</span>
               </section>
             </div>
-        </article>
-        <article class="gallery__post">
-          <div class="gallery__post-photo">
-            <a href="#">
-              <img src="img/photo-4-mobile@1x.jpg" alt="Кубанская бахча"></img>
-            <a>
-          </div>
-          <div class="gallery__post-content">
-            <cite class="gallery__post-author">Сергей</cite>
-            <time class="gallery__post-date">(25 часов назад)</time>
-            <p class="gallery__post-text">Самая кубанская в мире!</p>
-            <section class="gallery__post-likes">
-              <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></img></button>
-              <span>Нравится: 4</span>
-            </section>
-          </div>
-        </article>
-        <article class="gallery__post">
-          <div class="gallery__post-photo">
-            <a href="#">
-              <img src="img/photo-5-mobile@1x.jpg" alt="Вид с горы"></img>
-            <a>
-          </div>
-          <div class="gallery__post-content">
-            <cite class="gallery__post-author">Максим</cite>
-            <time class="gallery__post-date">(40 часов назад)</time>
-            <p class="gallery__post-text">Где снег-то?</p>
-            <section class="gallery__post-likes">
-              <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></img></button>
-              <span>Нравится: 150</span>
-            </section>
-          </div>
-        </article>
-        <article class="gallery__post">
-          <div class="gallery__post-photo">
-            <a href="#">
-              <img src="img/photo-6-mobile@1x.jpg" alt="Вид с илюминатора самолета"></img>
-            <a>
-          </div>
-          <div class="gallery__post-content">
-            <cite class="gallery__post-author">Надежда</cite>
-            <time class="gallery__post-date">(45 часов назад)</time>
-            <p class="gallery__post-text">Всем GM и взаимные лайки!</p>
-            <section class="gallery__post-likes">
-              <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></img></button>
-              <span>Нравится: 2560</span>
-            </section>
-          </div>
-        </article>
-        <p class="gallery__call-to-action">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+          </article>
+          <article class="gallery__post">
+            <div class="gallery__post-photo">
+              <a href="#">
+                <img src="img/photo-2-mobile@1x.jpg" alt="Барабаны">
+              </a>
+            </div>
+            <div class="gallery__post-content">
+              <cite class="gallery__post-author">Антон</cite>
+              <time class="gallery__post-date">(12 часов назад)</time>
+              <p p class="gallery__post-text">Соседи будут рады!</p>
+              <section class="gallery__post-likes">
+                <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></button>
+                <span>Нравится: 666</span>
+              </section>
+            </div>
+          </article>
+          <article class="gallery__post">
+              <div class="gallery__post-photo">
+                <a href="#">
+                  <img src="img/photo-3-mobile@1x.jpg" alt="Вид на небо через окна небоскреба">
+                </a>
+              </div>
+              <div class="gallery__post-content">
+                <cite class="gallery__post-author">Борис</cite>
+                <time class="gallery__post-date">(20 часов назад)</time>
+                <p class="gallery__post-text">Здесь могла быть ваша цитата о высоком и вечном.</p>
+                <section class="gallery__post-likes">
+                  <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></img></button>
+                  <span>Нравится: 215</span>
+                </section>
+              </div>
+          </article>
+          <article class="gallery__post">
+            <div class="gallery__post-photo">
+              <a href="#">
+                <img src="img/photo-4-mobile@1x.jpg" alt="Кубанская бахча"></img>
+              </a>
+            </div>
+            <div class="gallery__post-content">
+              <cite class="gallery__post-author">Сергей</cite>
+              <time class="gallery__post-date">(25 часов назад)</time>
+              <p class="gallery__post-text">Самая кубанская в мире!</p>
+              <section class="gallery__post-likes">
+                <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></img></button>
+                <span>Нравится: 4</span>
+              </section>
+            </div>
+          </article>
+          <article class="gallery__post">
+            <div class="gallery__post-photo">
+              <a href="#">
+                <img src="img/photo-5-mobile@1x.jpg" alt="Вид с горы"></img>
+              </a>
+            </div>
+            <div class="gallery__post-content">
+              <cite class="gallery__post-author">Максим</cite>
+              <time class="gallery__post-date">(40 часов назад)</time>
+              <p class="gallery__post-text">Где снег-то?</p>
+              <section class="gallery__post-likes">
+                <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></img></button>
+                <span>Нравится: 150</span>
+              </section>
+            </div>
+          </article>
+          <article class="gallery__post">
+            <div class="gallery__post-photo">
+              <a href="#">
+                <img src="img/photo-6-mobile@1x.jpg" alt="Вид с илюминатора самолета"></img>
+              </a>
+            </div>
+            <div class="gallery__post-content">
+              <cite class="gallery__post-author">Надежда</cite>
+              <time class="gallery__post-date">(45 часов назад)</time>
+              <p class="gallery__post-text">Всем GM и взаимные лайки!</p>
+              <section class="gallery__post-likes">
+                <button class="gallery__post-btn btn" type="button">Лайк<img src="photo1.jpg" alt=""></img></button>
+                <span>Нравится: 2560</span>
+              </section>
+            </div>
+          </article>
+        </div>
+        <section class="gallery__call-to-action">
+           <p>Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+        </section>
       </section>
       <section class="upload">
         <form action="https://echo.htmlacademy.ru/" class="upload__form">
           <img class="upload__photo" src="img/photo-7-mobile@1x.jpg" alt="Загружаемое фото">
-          <div class="upload-btn-wrapper">
+          <div class="upload__btn-wrapper">
             <button class="upload__btn upload__btn--cut" type="button">Обрезать<img src="cut.svg" alt=""></button>
             <button class="upload__btn upload__btn--greyback" type="button">Грейбек<img src="greyback.svg" alt=""></button>
             <button class="upload__btn upload__btn--contrast" type="button">Контраст<img src="contrast.svg" alt=""></button>
           </div>
-          <input type="range" min="1" max="10">
+          <div class="upload__controls">
+            <input class="upload__range  upload__range--show" type="range" min="1" max="10">
+            <input class="upload__range" type="range" min="1" max="10">
+            <input class="upload__range" type="range" min="1" max="10">
+          </div>
           <section class="upload__btns">
             <input type="submit" value="Запостить">
             <input type="reset" value="Отмена">
@@ -166,7 +175,7 @@
         </form>
       </section>
     </main>
-    <footer class="page-footer page-footer--show">
+    <footer class="page-footer  fpage-footer--show">
         <section class="page-footer__logo">
           <a href="index.html"><img src="logo.svg" alt="Логотип"></a>
         </section>
