--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <div class="page-header__inner">
         <h1 class="page-header__title">Мобильное приложение Пинк</h1><!--Скрыт-->
         <nav class="main-nav  main-nav--closed  main-nav--nojs">
-          <div class="main-nav__logo">
-            <img src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Логотип">
-          </div>
-          <button class="main-nav__toggler" type="button">Открыть меню</button>
           <div class="main-nav__wrapper">
+            <div class="main-nav__logo">
+              <img src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Логотип">
+            </div>
+            <button class="main-nav__toggler" type="button">Открыть меню</button>
             <ul class="main-nav__list">
               <li class="main-nav__item  main-nav__item--active">Главная</li>
               <li class="main-nav__item">
@@ -114,10 +114,7 @@
         </div>
       </section>
       <section class="price">
-        <div class="price__inner  slider">
-          <input class="price__input" type="radio" name="price" id="price-input-1">
-          <input class="price__input" type="radio" name="price" id="price-input-2" checked>
-          <input class="price__input" type="radio" name="price" id="price-input-3">
+        <div class="price__inner">
           <table class="price__table price__table--active">
             <thead>
               <tr class="price__header">
