--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       </section>
       <section class="research">
         <div class="research__inner">
-          <h2>Эффект на 24 часа!</h2>
-          <p>Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+          <h2>Эффект<br> на 24 часа!</h2>
+          <p>Британские ученые провели исследования<br>и доказали, что положительный эффект <br>от использования приложения длится<br>целые сутки!</p>
           <a class="research__link" href="#">Узнать больше об исследовании</a>
         </div>
       </section>
@@ -131,9 +131,9 @@
       </section>
       <section class="price">
         <div class="price__inner">
-          <input class="slider__input" type="radio" name="reviews" id="price-input-1" checked="checked">
-          <input class="slider__input" type="radio" name="reviews" id="price-input-2">
-          <input class="slider__input" type="radio" name="reviews" id="price-input-3">
+          <input class="slider__input" type="radio" name="price" id="price-input-1" checked="checked">
+          <input class="slider__input" type="radio" name="price" id="price-input-2">
+          <input class="slider__input" type="radio" name="price" id="price-input-3">
           <table class="price__table price__table--active">
             <thead>
               <tr class="price__header">
@@ -194,9 +194,9 @@
             </tbody>
           </table>
           <div class="price__table-control  slider__toggles">
-            <label class="slider__toggle" for="price-input-1">1</label>
-            <label class="slider__toggle" for="price-input-2">2</label>
-            <label class="slider__toggle" for="price-input-3">3</label>
+            <label for="price-input-1">1</label>
+            <label for="price-input-2">2</label>
+            <label for="price-input-3">3</label>
           </div>
         </div>
       </section>
