--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <li class="main-nav__item">
                 <a href="form.html">Конкурс</a>
               </li>
-              <li class="main-nav__item">
+              <li class="main-nav__item  main-nav__item--academy">
                 <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
               </li>
             </ul>
@@ -89,8 +89,8 @@
       </section>
       <section class="research">
         <div class="research__inner">
-          <h2>Эффект<br> на 24 часа!</h2>
-          <p>Британские ученые провели исследования<br>и доказали, что положительный эффект <br>от использования приложения длится<br>целые сутки!</p>
+          <h2>Эффект на 24 часа!</h2>
+          <p>Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
           <a class="research__link" href="#">Узнать больше об исследовании</a>
         </div>
       </section>
@@ -127,6 +127,10 @@
               <blockquote class="reviews__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
             </li>
           </ul>
+          <div class="reviews__arrow-control">
+            <button type="button" class="reviews__arrow  reviews__arrow--prev"></button>
+            <button type="button" class="reviews__arrow  reviews__arrow--next"></button>
+          </div>
         </div>
       </section>
       <section class="price">
