--- a/photo.html
+++ b/photo.html
@@ -24,7 +24,7 @@
             <li class="main-nav__item">
               <a href="form.html">Конкурс</a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item  main-nav__item--academy">
               <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
             </li>
           </ul>
@@ -221,7 +221,7 @@
         </form>
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer  page-footer--photo">
         <section class="page-footer__logo">
           <a href="index.html">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
