--- a/form.html
+++ b/form.html
@@ -111,7 +111,7 @@
             </div>
         </form>
       </main>
-      <footer class="page-footer">
+      <footer class="page-footer  page-footer--form">
         <section class="page-footer__logo">
           <a href="index.html">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
