Исправления по замечаниям

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
       </section>
       <section class="research">
         <div class="research__inner">
-          <h2>Эффект на 24 часа!</h2>
-          <p>Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+          <h2>Эффект <span>на 24 часа!</span></h2>
+          <p>Британские ученые провели исследования <span>и доказали, что</span>положительный эффект<span>от</span> использования приложения длится целые сутки!</p>
           <a class="research__link" href="#">Узнать больше об исследовании</a>
         </div>
       </section>
