--- a/form.html
+++ b/form.html
@@ -73,33 +73,45 @@
             <div class="form__container">
               <div class="form__inner">
                 <label class="form__label" for="surname">Фамилия:</label>
-                <input class="form__input-text" type="text" id="surname" name="surname" value="Укажите фамилию *">
+                <input class="form__input-text" type="text" id="surname" name="surname" placeholder="Укажите фамилию *">
               </div>
               <div class="form__inner">
                 <label class="form__label" for="name">Имя:</label>
-                <input class="form__input-text" type="text" id="name" name="name" value="Введите ваше имя *">
+                <input class="form__input-text" type="text" id="name" name="name" placeholder="Введите ваше имя *">
               </div>
               <div class="form__inner">
                 <label class="form__label" for="middle-name">Отчество:</label>
-                <input class="form__input-text" type="text" id="middle-name" name="middle-name" value="Ну и отчество тоже">
+                <input class="form__input-text" type="text" id="middle-name" name="middle-name" placeholder="Ну и отчество тоже">
               </div>
             </div>
             </fieldset>
             <fieldset class="form__group  form__group--progress">
               <legend class="form__legend  form__legend--progress">Ваши безбашенные достижения в путешествии</legend>
               <div class="form__container">
-                <input class="form__checkbox" type="checkbox" name="selfie" id="selfie" checked>
-                <label class="form__checkbox-label" for="selfie">Сделал селфи с акулой</label>
-                <input class="form__checkbox" type="checkbox" name="beach" id="beach" checked>
-                <label class="form__checkbox-label" for="beach">Обгорел на пляже</label>
-                <input class="form__checkbox" type="checkbox" name="chuck-norris" id="chuck-norris" >
-                <label class="form__checkbox-label" for="chuck-norris">Видел Чака Норриса</label>
-                <input class="form__checkbox" type="checkbox" name="gifts" id="gifts" >
-                <label class="form__checkbox-label" for="gifts">Накупил сувениров</label>
-                <input class="form__checkbox" type="checkbox" name="tower" id="tower" checked>
-                <label class="form__checkbox-label" for="tower">Удержал башню</label>
-                <input class="form__checkbox" type="checkbox" name="hotel" id="hotel">
-                <label class="form__checkbox-label" for="hotel">Разгромил отель</label>
+                <div class="form__checkbox-wrapper  form__checkbox-wrapper--selfie">
+                  <input class="form__checkbox" type="checkbox" name="selfie" id="selfie" checked>
+                  <label class="form__checkbox-label" for="selfie">Сделал селфи с акулой</label>
+                </div>
+                <div class="form__checkbox-wrapper">
+                  <input class="form__checkbox" type="checkbox" name="beach" id="beach" checked>
+                  <label class="form__checkbox-label" for="beach">Обгорел на пляже</label>
+                </div>
+                <div class="form__checkbox-wrapper  form__checkbox-wrapper--chuck">
+                  <input class="form__checkbox" type="checkbox" name="chuck-norris" id="chuck-norris" >
+                  <label class="form__checkbox-label" for="chuck-norris">Видел Чака Норриса</label>
+                </div>
+                <div class="form__checkbox-wrapper">
+                  <input class="form__checkbox" type="checkbox" name="gifts" id="gifts" >
+                  <label class="form__checkbox-label" for="gifts">Накупил сувениров</label>
+                </div>
+                <div class="form__checkbox-wrapper  form__checkbox-wrapper--tower">
+                  <input class="form__checkbox" type="checkbox" name="tower" id="tower" checked>
+                  <label class="form__checkbox-label" for="tower">Удержал башню</label>
+                </div>
+                <div class="form__checkbox-wrapper">
+                  <input class="form__checkbox" type="checkbox" name="hotel" id="hotel">
+                  <label class="form__checkbox-label" for="hotel">Разгромил отель</label>
+                </div>
               </div>
             </fieldset>
             <fieldset class="form__group  form__group--contacts">
@@ -107,11 +119,15 @@
               <div class="form__container">
                 <div class="form__inner">
                   <label class="form__label" for="tel">Номер телефона</label>
-                  <input class="form__input-text" type="tel" id="tel" name="tel" placeholder="Номер пожалуйста">
+                  <div class="form__input-wrapper  form__input-wrapper--tel ">
+                    <input class="form__input-text" type="tel" id="tel" name="tel" placeholder="Номер пожалуйста">
+                  </div>
                 </div>
                 <div class="form__inner">
                   <label class="form__label" for="email">Адрес почты</label>
-                  <input class="form__input-text" type="email" id="email" name="email" placeholder="Введите почту *">
+                  <div class="form__input-wrapper  form__input-wrapper--email">
+                    <input class="form__input-text" type="email" id="email" name="email" placeholder="Введите почту *">
+                  </div>
                 </div>
               </div>
             </fieldset>
