--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <section class="research">
         <div class="research__inner">
           <h2>Эффект <span>на 24 часа!</span></h2>
-          <p>Британские ученые провели исследования <span>и доказали, что</span>положительный эффект<span>от</span> использования приложения длится целые сутки!</p>
+          <p>Британские ученые провели исследования <span>и доказали, что положительный эффект</span><span>от использования приложения длится</span> целые сутки!</p>
           <a class="research__link" href="#">Узнать больше об исследовании</a>
         </div>
       </section>
