--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="main-nav  main-nav--opened  main-nav--nojs">
           <div class="main-nav__wrapper">
             <div class="main-nav__logo">
-              <img class="main-nav__logo-svg--desktop" src="img/logo-pink-white-desktop.svg" width="147" height="40px" alt="Pink">
+              <img class="main-nav__logo-svg--desktop" src="img/logo-pink-white-desktop.svg" width="147" height="40" alt="Pink">
                 <svg class="main-nav__logo-svg  main-nav__logo-svg--mobile" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
                   <g>
                     <path class="main-nav__logo-color" fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z" />
